# WealthSpot

./: -w  .dockerignore  .gitignore  ARCHITECTURE.md  MANUAL_SETUP_CHECKLIST.md  PRODUCTION_READINESS_REVIEW.md  README.md  SETUP_GUIDE.md  cleanup.md  docker-compose.yml  lint_out.txt  package-lock.json  package.json  turbo.json  typecheck_out.txt
.claude/: settings.local.json
docs/: DATABASE_MIGRATIONS.md  (+3 more)
services/api/: .dockerignore  .env.example  .env.production.example  Dockerfile  alembic.ini  pyproject.toml  sql_utils.py
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial_schema.py  003_rbac_approvals_opportunities.py  004_community_enhancements.py  005_companies_pincodes_points_groups.py  005b_media_address_company.py  006_property_enhancements.py  007_integrity_fixes.py  008_user_profile_completion.py  009_kyc_bank_audit.py  010_notification_preferences.py  011_opportunity_missing_columns.py  012_opportunity_media_missing_columns.py  013_vault_stats_irr_approval_edit.py  014_performance_indexes.py  015_check_constraints.py  016_company_vault_type.py  017_eoi_system.py  018_eoi_pipeline.py  019_likes_activities.py  020_app_videos.py  021_eoi_unique.py  022_eoi_stage_history.py  023_analytics_views.py  024_profiling_matching.py  025_profiling_enhancements.py  026_community_subtypes.py  027_move_profile_questions_to_vaults.py  028_site_content.py  029_video_toggle_cms_seed.py  030_user_personas_vault_features.py  031_persona_seeding.py  032_performance.py  033_cms_seed.py  034_opportunity_archived_status.py  035_vault_metrics_config.py  036_vault_explorer_metric.py  037_builder_updates.py  038_project_phase.py  039_appreciation.py  040_vault_explorers.py  (+7 more)
services/api/app/: celery_app.py  main.py  tasks.py
services/api/app/core/: __init__.py  assessments.py  config.py  database.py  exceptions.py  logging_config.py  security.py
services/api/app/middleware/: audit.py  auth.py  metrics.py  rate_limit.py  request_id.py
services/api/app/models/: __init__.py  admin_invite.py  app_video.py  appreciation_event.py  approval.py  builder_question.py  builder_update.py  comm_mapping.py  community.py  company.py  eoi_stage_history.py  expression_of_interest.py  investment.py  notification.py  opportunity.py  opportunity_assessment.py  opportunity_investment.py  opportunity_like.py  opportunity_media.py  pincode.py  platform_config.py  profiling.py  property.py  property_referral.py  role_group.py  site_content.py  user.py  user_point.py  vault_explorer.py  vault_feature_flag.py
services/api/app/routers/: admin.py  analytics.py  app_videos.py  appreciation.py  approvals.py  assessments.py  auth.py  bank_details.py  builder_updates.py  community.py  companies.py  control_centre.py  eoi.py  investments.py  kyc.py  lender.py  notifications.py  opportunities.py  pincodes.py  points.py  portfolio.py  profile.py  profiling.py  properties.py  referrals.py  site_content.py  templates.py  uploads.py  vault_features.py  webhooks.py
services/api/app/schemas/: admin_invite.py  analytics.py  app_video.py  appreciation.py  approval.py  assessment.py  builder_update.py  community.py  company.py  eoi.py  investment.py  lender.py  notification.py  opportunity.py  platform_config.py  profiling.py  property.py  user.py  vault_feature.py
services/api/app/services/: cache.py  email.py  encryption.py  matching.py  notification.py  payment.py  points.py  s3.py  sms.py  xirr.py
services/api/database/: 001_initial_schema.sql  002_seed_data.sql  003_rbac_approvals_opportunities.sql  004_community_enhancements.sql  005_companies_pincodes_points_groups.sql  005_media_address_company.sql  005b_media_address_company.sql  006_property_enhancements.sql  007_integrity_fixes.sql  008_user_profile_completion.sql  009_kyc_bank_audit.sql  010_notification_preferences.sql  011_opportunity_missing_columns.sql  012_opportunity_media_missing_columns.sql  013_vault_stats_irr_approval_edit.sql  014_performance_indexes.sql  014_safe_vault_rebrand.sql  015_check_constraints.sql  016_company_vault_type.sql  017_opportunity_closing_date.sql  018_eoi_builder_questions_comm_mappings.sql  019_eoi_pipeline_statuses.sql  019b_opportunity_likes_activities.sql  020_app_videos.sql  021_eoi_unique_user_opportunity.sql  022_eoi_stage_history.sql  023_analytics_views.sql  024_profiling_matching.sql  025_profiling_enhancements.sql  026_vault_feature_flags.sql  027_user_personas_vault_features.sql  029_video_toggle_cms_seed.sql  030_persona_seeding.sql  032_performance_enhancements.sql  033_cms_content_seed.sql  035_vault_metrics_seed.sql  036_update_vault_metrics.sql  037_builder_updates.sql  037_safe_vault_metrics_rename.sql  038_toast_interval_config.sql  (+9 more)
services/api/tests/: conftest.py  test_admin_approvals_control_centre_lender.py  test_app_videos.py  test_auth.py  test_eoi_pipeline.py  test_investments_referrals_templates_pincodes.py  test_kyc_bank.py  test_likes_shares.py  test_notifications_points.py  test_opportunities.py  test_properties.py
tests/api/: pyproject.toml
tests/api/tests/: conftest.py  test_admin_approvals_control_centre_lender.py  test_analytics.py  test_appreciation.py  test_approvals_shield_gate.py  test_assessment_parity.py  test_assessments_models.py  test_assessments_router.py  test_auth_vertical.py  test_builder_updates.py  test_community.py  test_companies.py  test_control_centre_vertical.py  test_notifications_community_vertical.py  test_opportunities_vertical.py  test_portfolio.py  test_profile.py  test_profile_completion.py  test_profiling.py  test_properties_vertical.py  test_shield_metrics.py  test_site_content.py  test_uploads.py  test_uploads_assessment_doc.py  test_vault_features.py  test_webhooks.py
tests/api/tests/performance/: locustfile.py
tests/api/tests/unit/: test_cache.py  test_email.py  test_encryption.py  test_matching.py  test_notification.py  test_payment.py  test_points.py  test_s3.py  test_sms.py  test_xirr.py
(+447 files in other folders)
