[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "wealthspot-api"
version = "0.1.0"
description = "WealthSpot.in – Fractional Real Estate Investment Platform API"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.0",
    "uvicorn[standard]>=0.42.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.29.0",
    "alembic>=1.18.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.28.0",
    "boto3>=1.42.0",
    "redis>=5.1.0",
    "celery>=5.6.0",
    "sentry-sdk[fastapi]>=2.5.0",
    "stripe>=14.0.0",
    "razorpay>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
# Tests moved to tests/api/ project
asyncio_mode = "auto"
testpaths = []
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = ["app/__pycache__/*", "*/migrations/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]
