[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "wealthspot-api"
version = "0.1.0"
description = "WealthSpot.in – Fractional Real Estate Investment Platform API"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.0",
    "uvicorn[standard]>=0.42.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.29.0",
    "alembic>=1.18.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.28.0",
    "boto3>=1.42.0",
    "redis>=5.1.0",
    "celery>=5.6.0",
    "sentry-sdk[fastapi]>=2.5.0",
    "stripe>=14.0.0",
    "razorpay>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
# Tests moved to tests/api/ project
asyncio_mode = "auto"
testpaths = []
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = ["app/__pycache__/*", "*/migrations/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function call in argument defaults (FastAPI Depends)
    "UP007",   # use X | Y for union types (keep Optional for readability)
    "UP042",   # replace str-enum (project uses str,Enum pattern for SQLAlchemy compatibility)
    "E402",    # module-import-not-at-top (intentional delayed imports in FastAPI app)
    "SIM105",  # suppressible-exception (explicit try/except/pass is clearer in this codebase)
    "SIM102",  # collapsible-if (separate ifs are often more readable)
    "SIM108",  # if-else-block-instead-of-if-exp (ternary not always clearer)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.mypy.overrides]
module = [
    "celery.*",
    "redis.*",
    "boto3.*",
    "razorpay.*",
    "jose.*",
    "passlib.*",
]
ignore_missing_imports = true
