[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wealthspot-tests-api"
version = "0.1.0"
description = "WealthSpot API test suite"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
    "faker>=40.0.0",
    "aiosqlite>=0.22.0",
    "locust>=2.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["../../../services/api/app"]
omit = ["*/migrations/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]
